[package]
name = "nanorpc-http"
version = "0.1.5"
edition = "2021"
license = "ISC"
description = "an extremely simple nanorpc backend built on top of HTTP"
repository = "https://github.com/antidmg/nanorpc-http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-socks5 = "0.6.0"
async-trait = "0.1.64"
bytes = "1.4.0"
concurrent-queue = "2.1.0"
future-utils = "0.12.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
nanorpc = "0.1.12"
serde_json = "1.0.93"
tokio = { version = "1.39.2", features = ["full"] }


[dev-dependencies]
thiserror = "1.0.38"
